Revert "Increase permgen space for javadoc creation"
This reverts commit 491b2fd69a25f746715f9d75940df9c96baa2404.